# water-credits-contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  SECURITY.md
.github/workflows/: ci.yml
contracts/credit_factory/: Cargo.toml
contracts/credit_factory/src/: lib.rs
contracts/credit_token/: Cargo.toml
contracts/credit_token/src/: lib.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/project_registry/: Cargo.toml
contracts/project_registry/src/: lib.rs
contracts/retirement_registry/: Cargo.toml
contracts/retirement_registry/src/: lib.rs
contracts/verification_oracle/: Cargo.toml
contracts/verification_oracle/src/: lib.rs
doc/: SPEC.md
scripts/: deploy.sh
tests/: Cargo.toml
tests/tests/: credit_lifecycle.rs  emergency_pause.rs  governance_oracle_execution.rs
tests/unit/: test_credit_token.rs
